added buttons to show sub-menu rather than using hover. added spinner. updated to show checklist/radio buttons

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 </head>
 
 <body>
-
 	<header class="main-welcome-page">
 		<video autoplay muted loop id="myVideo">
 			<source src="./assets/background.mp4" type="video/mp4">
@@ -20,222 +19,277 @@
 			<form action="" class="initial-search">
 				<input type="text" name="search" class="initial-search-box" placeholder="Search for recipes/ingredients" required>
 				<i class="fas fa-search"></i>
-				<!-- <span class="submit"><button>Search</button></span> -->
 			</form>
 		</div>
 	</header>
 
 	<nav clas="nav-form">
-		<form action="" class="recipe-search">
 			<ul class="main-menu wrapper">
 
-				<li class="search-bar"><input type="text" name="search" class="recipe-search-box" placeholder="Search for recipes/ingredients" required></li>
+				<li class="search-bar">
+					<input type="text" name="search" class="recipe-search-box" placeholder="Search for recipes/ingredients" required>
+				</li>
 
-				<li class="course-type main-menu-options">course type
+				<li class="course-type main-menu-options">
+					<button name="">course type</button>
 					<ul class="sub-menu">
 						<li>
-							<input type="radio" name="course-type" value="&allowedCourse[]=course^course-Appetizers" id="appetizers">
-							<label for="appetizers">apperizers</label>
+							<label for="appetizers">
+								<input type="radio" name="course-type" value="&allowedCourse[]=course^course-Appetizers" id="appetizers">appetizers
+							</label>
 						</li>
 						<li>
-							<input type="radio" name="course-type" value="&allowedCourse[]=course^course-Beverages" id="beverages">
-							<label for="beverages">beverages</label>
+							<label for="beverages">
+								<input type="radio" name="course-type" value="&allowedCourse[]=course^course-Beverages" id="beverages">beverages
+							</label>
+							
 						</li>
 						<li>
-							<input type="radio" name="course-type" value="&allowedCourse[]=course^course-Breads" id="breads">
-							<label for="breads">breads</label>
+							<label for="breads">
+								<input type="radio" name="course-type" value="&allowedCourse[]=course^course-Breads" id="breads">breads
+							</label>
 						</li>
 						<li>
-							<input type="radio" name="course-type" value="&allowedCourse[]=course^course-Breakfast and Brunch" id="breakfast and brunch">
-							<label for="breakfast and brunch">breakfast and brunch</label>
+							<label for="breakfast and brunch">
+								<input type="radio" name="course-type" value="&allowedCourse[]=course^course-Breakfast and Brunch" id="breakfast and brunch">breakfast and brunch
+							</label>
 						</li>
 						<li>
-							<input type="radio" name="course-type" value="&allowedCourse[]=course^course-Cocktails" id="cocktails">
-							<label for="">cocktails</label>
+							<label for="cocktails">
+								<input type="radio" name="course-type" value="&allowedCourse[]=course^course-Cocktails" id="cocktails">cocktails
+							</label>
 						</li>
 						<li>
-							<input type="radio" name="course-type" value="&allowedCourse[]=course^course-Condiments and Sauces" id="condiments and sauces">
-							<label for="condiments and sauces">condiments and sauces</label>
+							<label for="condiments and sauces">
+								<input type="radio" name="course-type" value="&allowedCourse[]=course^course-Condiments and Sauces" id="condiments and sauces">condiments and sauces
+							</label>
 						</li>
 						<li>
-							<input type="radio" name="course-type" value="&allowedCourse[]=course^course-Desserts" id="desserts">
-							<label for="desserts">desserts</label>
+							<label for="desserts">
+								<input type="radio" name="course-type" value="&allowedCourse[]=course^course-Desserts" id="desserts">desserts
+							</label>
 						</li>
 						<li>
-							<input type="radio" name="course-type" value="&allowedCourse[]=course^course-Lunch" id="lunch">
-							<label for="lunch">lunch</label>
+							<label for="lunch">
+								<input type="radio" name="course-type" value="&allowedCourse[]=course^course-Lunch" id="lunch">lunch
+							</label>
 						</li>
 						<li>
-							<input type="radio" name="course-type" value="&allowedCourse[]=course^course-Main Dishes" id="main dishes">
-							<label for="main dishes">main dishes</label>
+							<label for="main dishes">
+								<input type="radio" name="course-type" value="&allowedCourse[]=course^course-Main Dishes" id="main dishes">main dishes
+							</label>
 						</li>
 						<li>
-							<input type="radio" name="course-type" value="&allowedCourse[]=course^course-Salads" id="salads">
-							<label for="salads">salads</label>
+							<label for="salads">
+								<input type="radio" name="course-type" value="&allowedCourse[]=course^course-Salads" id="salads">salads
+							</label>
 						</li>
 						<li>
-							<input type="radio" name="course-type" value="&allowedCourse[]=course^course-Side Dishes" id="side dishes">
-							<label for="side dishes">side dishes</label>
+							<label for="side dishes">
+								<input type="radio" name="course-type" value="&allowedCourse[]=course^course-Side Dishes" id="side dishes">side dishes
+							</label>
 						</li>
 						<li>
-							<input type="radio" name="course-type" value="&allowedCourse[]=course^course-Snacks" id="snacks">
-							<label for="snacks">snacks</label>
+							<label for="snacks">
+								<input type="radio" name="course-type" value="&allowedCourse[]=course^course-Snacks" id="snacks">snacks
+							</label>
 						</li>
 						<li>
-							<input type="radio" name="course-type" value="&allowedCourse[]=course^course-Soups" id="soups">
-							<label for="soups">soups</label>
+							<label for="soups">
+								<input type="radio" name="course-type" value="&allowedCourse[]=course^course-Soups" id="soups">soups
+							</label>
 						</li>
 						<li>
-							<input type="radio" name="course-type" value="" checked id="any">
-							<label for="any">any</label>
+							<label for="any">
+								<input type="radio" name="course-type" value="" checked id="any">any
+							</label>
 						</li>
 					</ul>
 				</li>
 
-				<li class="cuisine-type main-menu-options">cuisine type
+				<li class="cuisine-type main-menu-options">
+					<button>cuisine type</button>
 					<ul class="sub-menu">
 						<li>
-							<input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-american" id="american">
-							<label for="american">american</label>
+							<label for="american">
+								<input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-american" id="american">american
+							</label>
 						</li>
 						<li>
-							<input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-barbecue-bbq" id="barbecue">
-							<label for="barbecue">barbecue</label>
+							<label for="barbecue">
+								<input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-barbecue-bbq" id="barbecue">barbecue
+							</label>
 						</li>
 						<li>
-							<input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-cajun" id="cajun & creole">
-							<label for="cajun & creole">cajun & creole</label>
+							<label for="cajun & creole">
+								<input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-cajun" id="cajun & creole">cajun & creole
+							</label>
 						</li>
 						<li>
-							<input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-chinese" id="chinese">
-							<label for="chinese">chinese</label>
+							<label for="chinese">
+								<input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-chinese" id="chinese">chinese
+							</label>
 						</li>
 						<li>
-							<input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-cuban" id="cuban">
-							<label for="cuban">cuban</label>
+							<label for="cuban">
+								<input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-cuban" id="cuban">cuban
+							</label>
 						</li>
 						<li>
-							<input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-english" id="english">
-							<label for="english">english</label>
+							<label for="english">
+								<input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-english" id="english">english
+							</label>
 						</li>
 						<li>
-							<input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-french" id="french">
-							<label for="french">french</label>
+							<label for="french">
+								<input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-french" id="french">french
+							</label>
 						</li>
 						<li>
-							<input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-german" id="german">
-							<label for="german">german</label>
+							<label for="german">
+								<input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-german" id="german">german
+							</label>
 						</li>
 						<li>
-							<input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-greek" id="greek">
-							<label for="greek">greek</label>
+							<label for="greek">
+								<input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-greek" id="greek">greek
+							</label>
 						</li>
 						<li>
-							<input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-hawaiian" id="hawaiian">
-							<label for="hawaiian">hawaiian</label>
+							<label for="hawaiian">
+								<input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-hawaiian" id="hawaiian">hawaiian
+							</label>
 						</li>
 						<li>
-							<input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-hungarian" id="hungarian">
-							<label for="hungarian">hungarian</label>
+							<label for="hungarian">
+								<input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-hungarian" id="hungarian">hungarian
+							</label>
 						</li>
 						<li>
-							<input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-indian" id="indian">
-							<label for="indian">indian</label>
+							<label for="indian">
+								<input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-indian" id="indian">indian
+							</label>
 						</li>
 						<li>
-							<input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-irish" id="irish">
-							<label for="irish">irish</label>
+							<label for="irish">
+								<input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-irish" id="irish">irish
+							</label>
 						</li>
 						<li>
-							<input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-italian" id="italian">
-							<label for="italian">italian</label>
+							<label for="italian">
+								<input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-italian" id="italian">italian
+							</label>
 						</li>
 						<li>
-							<input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-japanese" id="japanese">
-							<label for="japanese">japanese</label>
+							<label for="japanese">
+								<input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-japanese" id="japanese">japanese
+							</label>
 						</li>
 						<li>
-							<input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-kid-friendly" id="kid-friendly">
-							<label for="kid-friendly">kid-friendly</label>
+							<label for="kid-friendly">
+								<input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-kid-friendly" id="kid-friendly">kid-friendly
+							</label>
 						</li>
 						<li>
-							<input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-mediterranean" id="mediterranean">
-							<label for="mediterranean">mediterranean</label>
+							<label for="mediterranean">
+								<input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-mediterranean" id="mediterranean">mediterranean
+							</label>
 						</li>
 						<li>
-							<input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-mexican" id="mexican">
-							<label for="mexican">mexican</label>
+							<label for="mexican">
+								<input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-mexican" id="mexican">mexican
+							</label>
 						</li>
 						<li>
-							<input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-moroccan" id="moroccan">
-							<label for="moroccan">moroccan</label>
+							<label for="moroccan">
+								<input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-moroccan" id="moroccan">moroccan
+							</label>
 						</li>
 						<li>
-							<input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-portuguese" id="portuguese">
-							<label for="portuguese">portuguese</label>
+							<label for="portuguese">
+								<input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-portuguese" id="portuguese">portuguese
+							</label>
 						</li>
 						<li>
-							<input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-spanish" id="spanish">
-							<label for="spanish">spanish</label>
+							<label for="spanish">
+								<input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-spanish" id="spanish">spanish
+							</label>
 						</li>
 						<li>
-							<input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-southern" id="southern & soul">
-							<label for="southern & soul">southern & soul</label>
+							<label for="southern & soul">
+								<input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-southern" id="southern & soul">southern & soul
+							</label>
 						</li>
 						<li>
-							<input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-southwstern" id="southwestern">
-							<label for="southwestern">southwestern</label>
+							<label for="southwestern">
+								<input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-southwstern" id="southwestern">southwestern
+							</label>
 						</li>
 						<li>
-							<input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-swedish" id="swedish">
-							<label for="swedish">swedish</label>
+							<label for="swedish">
+								<input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-swedish" id="swedish">swedish
+							</label>
 						</li>
 						<li>
-							<input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-thai" id="thai">
-							<label for="thai">thai</label>
+							<label for="thai">
+								<input type="checkbox" name="cuisine-type" value="&allowedCuisine[]=cuisine^cuisine-thai" id="thai">thai
+							</label>
 						</li>
 					</ul>
 				</li>
 
-				<li class="dietary-restrictions main-menu-options">dietary restrictions
+				<li class="dietary-restrictions main-menu-options">
+					<button>dietary restrictions</button>
 					<ul class="sub-menu">
 						<li>
-							<input type="radio" name="dietary-restrictions" value="&allowedDiet[]=388^Lacto vegetarian" id="lacto vegetarian">
-							<label for="lacto vegetarian">lacto vegetarian</label>
+							<label for="lacto vegetarian">
+								<input type="radio" name="dietary-restrictions" value="&allowedDiet[]=388^Lacto vegetarian" id="lacto vegetarian">lacto vegetarian
+							</label>
 						</li>
 						<li>
-							<input type="radio" name="dietary-restrictions" value="&allowedDiet[]=387^Lacto-ovo vegetarian" id="lacto-ovo vegetarian">
-							<label for="lacto-ovo vegetarian">lacto-ovo vegetarian</label>
+							<label for="lacto-ovo vegetarian">
+								<input type="radio" name="dietary-restrictions" value="&allowedDiet[]=387^Lacto-ovo vegetarian" id="lacto-ovo vegetarian">lacto-ovo vegetarian
+							</label>
 						</li>
 						<li>
-							<input type="radio" name="dietary-restrictions" value="&allowedDiet[]=389^Ovo vegetarian" id="ovo vegetarian">
-							<label for="ovo vegetarian">ovo vegetarian</label>
+							<label for="ovo vegetarian">
+								<input type="radio" name="dietary-restrictions" value="&allowedDiet[]=389^Ovo vegetarian" id="ovo vegetarian">ovo vegetarian
+							</label>
 						</li>
 						<li>
-							<input type="radio" name="dietary-restrictions" value="&allowedDiet[]=403^Paleo" id="paleo">
-							<label for="paleo">paleo</label>
+							<label for="paleo">
+								<input type="radio" name="dietary-restrictions" value="&allowedDiet[]=403^Paleo" id="paleo">paleo
+							</label>
 						</li>
 						<li>
-							<input type="radio" name="dietary-restrictions" value="&allowedDiet[]=390^Pescetarian" id="pescetarian">
-							<label for="pescetarian">pescetarian</label>
+							<label for="pescetarian">
+								<input type="radio" name="dietary-restrictions" value="&allowedDiet[]=390^Pescetarian" id="pescetarian">pescetarian
+							</label>
 						</li>
 						<li>
-							<input type="radio" name="dietary-restrictions" value="&allowedDiet[]=386^Vegan" id="vegan">
-							<label for="vegan">vegan</label>
+							<label for="vegan">
+								<input type="radio" name="dietary-restrictions" value="&allowedDiet[]=386^Vegan" id="vegan">vegan
+							</label>
 						</li>
 						<li>
-							<input type="radio" name="dietary-restrictions" value="" checked id="none">
-							<label for="none">none</label>
+							<label for="none">
+								<input type="radio" name="dietary-restrictions" value="" checked id="none">none
+							</label>
 						</li>
 					</ul>
+				</li>
+
+				<li class="main-menu-options">
 				</li>
 
 				<li class="submit main-menu-options"><button>Search</button></li>
 
 			</ul>
-		</form>
 	</nav>
 
+	<section class="spinner">
+		<i class="fas fa-spin fa-spinner"></i>
+	</section>
 
 	<section class="recipe-list wrapper">
 
