added hide sub-menus when search is clicked, mostly responsive design

--- a/index.html
+++ b/index.html
@@ -24,11 +24,14 @@
 	</header>
 
 	<nav clas="nav-form">
-			<ul class="main-menu wrapper">
+			<ul class="main-menu main-menu-search">
 
-				<li class="search-bar">
+				<li class="search-bar wrapper">
 					<input type="text" name="search" class="recipe-search-box" placeholder="Search for recipes/ingredients" required>
 				</li>
+			</ul>
+			
+			<ul class="main-menu main-menu-buttons wrapper">
 
 				<li class="course-type main-menu-options">
 					<button name="">course type</button>
@@ -279,10 +282,12 @@
 					</ul>
 				</li>
 
-				<li class="main-menu-options">
-				</li>
+				<!-- <li class="main-menu-options">
+				</li> -->
 
-				<li class="submit main-menu-options"><button>Search</button></li>
+				<li class="submit main-menu-submit">
+					<button>Search</button>
+				</li>
 
 			</ul>
 	</nav>
