--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Food Project</title>
+	<title>Get Recipes</title>
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
 	 crossorigin="anonymous">
+	<link rel="shortcut icon" type="image/x-icon" href="./assets/food.png" />
 	<link rel="stylesheet" href="public/styles/style.css">
 </head>
 
@@ -35,7 +36,7 @@
 	<!-- END OF HEADER SECTION -->
 
 	<!-- START OF NAV SECTION -->
-	<nav clas="nav-form">
+	<nav class="nav-form">
 		<ul class="main-menu main-menu-search">
 			<li class="search-bar wrapper">
 				<input type="text" name="search" class="recipe-search-box" placeholder='Try "Chicken"' required>
